<resources>
    <string name="app_name">Mimo</string>
    <string name="suporte_teclabs">Mimo</string>
    <string name="validation_title">Validação</string>
    <string name="validation_text">Você receberá um código de ativação, copie no campo abaixo para validar seu usuário.</string>
    <string name="button_validate">Validar</string>
    <string name="button_register">Cadastrar</string>
    <string name="hint_name">Seu nome</string>
    <string name="hint_phone">Seu Telefone (Ex.: 16 98765&#8211;4321)</string>
    <string name="hint_code">Código (4 Digits)</string>
    <string name="validation_code_label">Código de ativação</string>
    <string name="icon_user">Imagem do usuário</string>
    <string name="user_phone_icon">Telefone</string>
    <string name="page_name_service">Serviço</string>
    <string name="send_msg_button">Enviar</string>
    <string name="title_activity_service">Serviços</string>
    <string name="page_name_my_image">Minha imagem de perfil</string>
    <string name="TAB_0">Buscar Serviço</string>
    <string name="be_partner">Seja nosso parceiro!</string>
    <string name="offer_service">Ofereça seu serviço!</string>
    <string name="zero_two_digits">00</string>
    <string name="brl">R$</string>
    <string name="per_month">/mês</string>
    <string name="lorem_paragraph">Deserunt occaecat labore dolor sint ut ut sunt occaecat laborum quis dolore dolor sit qui ad magna reprehen</string>
    <string name="signup_uppercase">CADASTRE-SE</string>
    <string name="deals_text">Acompanhe aqui suas negociações…</string>
    <string name="message_is_not_sent">Sua mensagem não foi enviada, tente novamente!</string>
    <string name="rate">Avaliar!</string>
    <string name="cancel">Cancelar</string>
    <string name="done">Pronto!</string>
    <string name="name_error_msg">Informar seu nome é obrigatório!</string>
    <string name="email_error_msg">Informar seu e-mail é obrigatório!</string>
    <string name="no_internet">Vocẽ não está conectado à internet</string>
    <string name="terms_link">https://teclabs.com.br</string>
    <string name="no_permission">Permissão negada</string>
    <string name="no_permission_text">Você deve prover as permissões necessárias para usar o App!</string>
    <string name="close">Fechar</string>
    <string name="attention">Atenção!</string>
    <string name="quit_confirm">Você realmente quer sair?</string>
    <string name="congrat">Parabéns!!!</string>
    <string name="congrat_text">Agora você poderá oferecer serviços!</string>
    <string name="choose_services">Escolha os serviços que deseja oferecer</string>
    <string name="choose_image">Selecione uma imagem</string>
    <string name="phone_invalid">Número de telefone inválido, tente novamente…</string>
    <string name="server_error">Alguma coisa está errada com nossos servidores, tente novamente mais tarde…</string>
    <string name="voice_search">Diga o que você procura…</string>
    <string name="voice_search_error">Seu dispositivo não é capaz de reconhecer vozes, utilize o teclado!</string>
    <string name="choose_new_image">ESCOLHER UMA NOVA FOTO</string>
</resources>
